test/types/enum/diten/badConfigParamEnum.good
badConfigParamEnum.chpl:1: error: unresolved enumerated type symbol "orange"
