test/types/enum/diten/badConfigParamEnum.chpl
enum color { red, green, blue };

config param c = color.red;

writeln(c);
